.local-manifest/db/adminer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer

spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: adminer

  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - name: adminer
          image: adminer:5.4.1
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
