.local-manifest/db/adminer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer

spec:
  selector:
    app: adminer
  ports:
    - name: http
      port: 80
      targetPort: http
