.local-manifest/db/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb

spec:
  type: ClusterIP
  selector:
    app: mariadb
  ports:
    - name: mariadb
      port: 3306
      targetPort: mariadb
